<resources>
    <string name="app_label">Jugalkishor</string>
    <string name="app_name">Jugalkishor</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_network_connection_alert">No Internet !</string>
    <string name="language_setting">Language</string>

    <string name="nav_home">Home</string>
    <string name="nav_invitation">Invitation</string>
    <string name="nav_god">Shree Vishwakarma</string>
    <string name="nav_about">About</string>
    <string name="nav_news">News</string>
    <string name="nav_gallery">Photo Gallery</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_logout">Log Out</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="lang_dialog_title">Choose your language</string>

    <string name="login">Login</string>

    <!-- Language select dialog -->
    <string-array name="language_select">
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="gmail_login">Login with Gmail</string>

    <string name="facebook_app_id">173684026528727</string>
    <string name="fb_login_protocol_scheme">fb173684026528727</string>
    <string name="space">&#160;</string>

    <!--Register View-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
</resources>
